--- a/package.json
+++ b/package.json
@@ -9,27 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.4.5"
+    "vite": "^4.4.11"
   },
-  "description": "",
-  "main": "main.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TrinidadBaldovino/tp-integrador-digitalers.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TrinidadBaldovino/tp-integrador-digitalers/issues"
-  },
-  "homepage": "https://github.com/TrinidadBaldovino/tp-integrador-digitalers#readme",
+  
   "dependencies": {
-    "bootstrap": "^5.3.1",
-    "esbuild": "^0.18.20",
-    "nanoid": "^3.3.6",
-    "picocolors": "^1.0.0",
-    "postcss": "^8.4.28",
-    "rollup": "^3.28.0",
-    "source-map-js": "^1.0.2"
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
+    "swiper": "^10.3.1"
   }
 }
